--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.29.1",
+    "moment-jalaali": "^0.10.1",
     "next": "^14.2.17",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-multi-date-picker": "^4.5.2",
     "recharts": "^2.3.2",
     "tailwindcss-rtl": "^0.9.0"
   },
