--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "moment": "^2.29.1",
-    "moment-jalaali": "^0.10.1",
+    "@types/react-big-calendar": "^1.15.0",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "next": "^14.2.17",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-multi-date-picker": "^4.5.2",
