--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@types/react-big-calendar": "^1.15.0",
     "moment": "^2.30.1",
     "moment-jalaali": "^0.10.4",
@@ -17,9 +18,11 @@
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-multi-date-picker": "^4.5.2",
     "recharts": "^2.3.2",
-    "tailwindcss-rtl": "^0.9.0"
+    "tailwindcss-rtl": "^0.9.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
